--- a/RESERVATION.html
+++ b/RESERVATION.html
@@ -11,7 +11,7 @@
         <header>
             <img data-aos="fade-down" data-aos-duration="1500" src="https://github.com/vireakyuth-ren/Phka-Malis-Restaurant/blob/main/logo.png?raw=true" alt="logo" class="logo">
             <nav>
-                <a data-aos="fade-down" data-aos-duration="1500" href="#home">HOME</a>
+                <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
                 <a data-aos="fade-down" data-aos-duration="2000" href="#about">ABOUT</a>
                 <a data-aos="fade-down" data-aos-duration="2500" href="#menu">MENU</a>
                 <a data-aos="fade-down" data-aos-duration="3000" href="#" class="active_page">RESERVATION</a>
