Update menu.html navigation

--- a/menu.html
+++ b/menu.html
@@ -12,12 +12,12 @@
     <header>
         <img data-aos="fade-down" data-aos-duration="1500" src="logo.png" alt="img" class="logo">
         <nav> 
-            <a data-aos="fade-down" data-aos-duration="1500" href="#home">HOME</a>
-            <a data-aos="fade-down" data-aos-duration="2000" href="#about">ABOUT</a>
-            <a data-aos="fade-down" data-aos-duration="2500" href="#menu">MENU</a>
-            <a data-aos="fade-down" data-aos-duration="3000" href="#reservation">RESERVATION</a>
-            <a data-aos="fade-down" data-aos-duration="3000" href="#blog">BLOG</a>
-            <a data-aos="fade-down" data-aos-duration="3000" href="#contact">CONTACT</a>
+            <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
+            <a data-aos="fade-down" data-aos-duration="2000" href="about.html">ABOUT</a>
+            <a data-aos="fade-down" data-aos-duration="2500" href="#">MENU</a>
+            <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
+            <a data-aos="fade-down" data-aos-duration="3000" href="blog.html">BLOG</a>
+            <a data-aos="fade-down" data-aos-duration="3000" href="contact.html">CONTACT</a>
         </nav>
     </header>
     <main>
@@ -116,4 +116,5 @@
 
 </body>
 </html>
+
 
