--- a/reservation.html
+++ b/reservation.html
@@ -12,11 +12,11 @@
             <img data-aos="fade-down" data-aos-duration="1500" src="https://github.com/vireakyuth-ren/Phka-Malis-Restaurant/blob/main/logo.png?raw=true" alt="logo" class="logo">
             <nav>
                 <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
-                <a data-aos="fade-down" data-aos-duration="2000" href="#about">ABOUT</a>
-                <a data-aos="fade-down" data-aos-duration="2500" href="#menu">MENU</a>
+                <a data-aos="fade-down" data-aos-duration="2000" href="about.html">ABOUT</a>
+                <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
                 <a data-aos="fade-down" data-aos-duration="3000" href="#" class="active_page">RESERVATION</a>
-                <a data-aos="fade-down" data-aos-duration="3000" href="#blog">BLOG</a>
-                <a data-aos="fade-down" data-aos-duration="3000" href="#contact">CONTACT</a>
+                <a data-aos="fade-down" data-aos-duration="3000" href="blog.html">BLOG</a>
+                <a data-aos="fade-down" data-aos-duration="3000" href="contact.html">CONTACT</a>
             </nav>
         </header>
         <main>
