--- a/reservation.html
+++ b/reservation.html
@@ -62,7 +62,17 @@
                         
                         <!-- Making request -->
                         <label for="request">Additional Request</label><br>
-                        <textarea placeholder="Anything to request" rows="10"></textarea>
+                        <textarea placeholder="Anything to request" rows="10"></textarea><br><br>
+
+                        <!-- Choose your branches -->
+                        <label for="chbranch"> Choose Malis's branch</label><br>
+                        <select name="chbranch" id="chbranch">
+                        <option value="Phnom Penh">Phnom Penh</option>
+                        <option value="Siem Reap">Siem Reap</option>
+                        <option value="Battambong">Battambong</option>
+                        </select>
+
+                        <a class="book_btn" href="#">Book a table</a>
                     </form><br><br>
                 </div>
             </section>
@@ -113,8 +123,6 @@
                     <a href="#" class="btn">Get Directions</a>
                 </div>
             </section>
-
-            <a class="book_btn" href="#">Book a table</a>
         </main>
         <footer>
             <div class="footer-image" >
