--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
         <img data-aos="fade-down" data-aos-duration="1500" src="logo.png" alt="img" class="logo">
         <nav> 
             <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
-            <a data-aos="fade-down" data-aos-duration="2000" href="about.html">ABOUT</a>
+            <a data-aos="fade-down" data-aos-duration="2000" href="aboutus.html">ABOUT</a>
             <a data-aos="fade-down" data-aos-duration="2500" href="#">MENU</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="blog.html">BLOG</a>
@@ -258,3 +258,4 @@
 
 </body>
 </html>
+
