--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head> 
@@ -16,8 +16,6 @@
             <a data-aos="fade-down" data-aos-duration="2000" href="aboutus.html">ABOUT</a>
             <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
-            <a data-aos="fade-down" data-aos-duration="3000" href="blog.html">BLOG</a>
-            <a data-aos="fade-down" data-aos-duration="3000" href="contact.html">CONTACT</a>
         </nav>
     </header>
     <main>
@@ -127,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
