--- a/reservation.html
+++ b/reservation.html
@@ -125,8 +125,9 @@
 
         </main>
         <footer>
+        <div class="footer-message"> 
+        </div>
         <div class="footer">
-
             <div class="footer-contents" data-aos="zoom-out" data-aos-duration="2000">
                 <div class="footer-section">
                     <h3>About</h3>
