finalize all files

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <header>
         <img data-aos="fade-down" data-aos-duration="1500" src="logo.png" alt="img" class="logo">
         <nav> 
-            <a data-aos="fade-down" data-aos-duration="1500" href="home.html">HOME</a>
+            <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
             <a data-aos="fade-down" data-aos-duration="2000" href="#">ABOUT</a>
             <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
@@ -217,27 +217,26 @@
 
             <div class="footer-contents" data-aos="zoom-out" data-aos-duration="2000">
                 <div class="footer-section">
-                    <h3>About</h3>
+                    <h3>About Us</h3>
                     <p>We serve history and tradition in plates.</p>
                 </div>
 
                 <div class="footer-section">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Reservation</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About us</a></li>
+                        <li><a href="menu.html">Our Menu</a></li>
+                        <li><a href="reservation.html">Reserve a table</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <div class="contact-info">
-                        <p class="address"><b>Address:</b> #278H, Street 201R, Kroalkor <br>Village, Sangkat Kilometer 6, Khan Russey <br> Keo, Phnom Penh, Cambodia </p>
-                        <p class="email"><b>Email:</b> phkamalis@gmail.com</p>
-                        <p class="telephone"><b>Telephone: </b>(+855)99 9999 99</p>
+                        <p class="address"><b>Address:</b> No.278H, St.209R, Phnom Penh</p>
+                        <p class="email"><b>Email:</b> Malis@domain.com</p>
+                        <p class="telephone"><b>Telephone: </b>(+855)12 345 678</p>
                     </div>
                 </div>
 
@@ -247,7 +246,7 @@
 
             </div>
 
-            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group ....  | Prof. Prohim Tam</p>
+            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group Jasmine | Prof. Prohim Tam</p>
 
         </div>
 
