--- a/reservation.html
+++ b/reservation.html
@@ -13,8 +13,8 @@
             <img data-aos="fade-down" data-aos-duration="1500" src="https://github.com/vireakyuth-ren/Phka-Malis-Restaurant/blob/main/logo.png?raw=true" alt="logo" class="logo">
             <nav>
                 <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
-                <a data-aos="fade-down" data-aos-duration="2000" href="#about">ABOUT</a>
-                <a data-aos="fade-down" data-aos-duration="2500" href="#menu">MENU</a>
+                <a data-aos="fade-down" data-aos-duration="2000" href="aboutus.html">ABOUT</a>
+                <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
                 <a data-aos="fade-down" data-aos-duration="3000" href="#" class="active_page">RESERVATION</a>
             </nav>
         </header>
@@ -80,14 +80,14 @@
             <section class="location">
                 <!-- Embedded some map -->
                  <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.9523417229393!2d104.92130117550974!3d11.555274344344237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3109517da47e0059%3A0xf10c21be9d9fc58a!2sBkk1(pp)!5e0!3m2!1sen!2skh!4v1760592501420!5m2!1sen!2skh" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.1030889006124!2d104.89837077598627!3d11.616000088588496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095177ee61fd7d%3A0xa66cfdf83a58b2ae!2sAmerican%20University%20of%20Phnom%20Penh!5e0!3m2!1sen!2skh!4v1763798123179!5m2!1sen!2skh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                  </div>
 
                 <!-- panel info -->
                 <div class="panel-info">
                     <h2>Phnom Penh</h2>
-                    <p>24 st 278, Phnom Penh</p>
-                    <p>Call: +855-123-467-89</p>
+                    <p>No.278H, St.209R, Phnom Penh</p>
+                    <p>Call: (+855)12 345 678</p>
                     <p>Email: Malis@domain.com</p>
                     <div class="hours">
                         <h3>Lunch Time</h3>
@@ -100,24 +100,24 @@
 
             <!-- More branches  -->
             <section class="location-grids">
-                <div class="branhes">
+                <div class="branch">
                     <img src="https://thumbs.dreamstime.com/b/independence-monument-phnom-penh-hand-drawn-ink-vector-illustration-287382325.jpg?w=768" alt="PP Icon" width="200"> <!-- Replace with actual icon URL -->
                     <h3>Phnom Penh</h3>
-                    <p>24 st 278, Phnom Penh</p>
+                    <p>No.278H, St.209R, Phnom Penh</p>
                     <p>Malis@domain.com</p>
                     <a href="#" class="btn">Get Directions</a>
                 </div>
-                <div class="branhes">
+                <div class="branch">
                     <img src="https://www.shutterstock.com/image-vector/cambodia-angkor-wat-hand-drawing-600nw-2322866491.jpg" alt="SR Icon" width="330"> <!-- Replace with actual icon URL -->
                     <h3>Siem Reap</h3>
-                    <p>82 st 987, Siem Reap City</p>
+                    <p>No.82, St.987, Siem Reap City</p>
                     <p>Malis@domain.com</p>
                     <a href="#" class="btn">Get Directions</a>
                 </div>
-                <div class="branhes">
+                <div class="branch">
                     <img src="BTT_icon.png" alt="BTB Icon" width="150"> <!-- Replace with actual icon URL -->
                     <h3>Battambong</h3>
-                    <p>102 st 76, Sangkae River</p>
+                    <p>No.102, St.76, Sangkae River</p>
                     <p>Malis@domain.com</p>
                     <a href="#" class="btn">Get Directions</a>
                 </div>
@@ -130,27 +130,26 @@
         <div class="footer">
             <div class="footer-contents" data-aos="zoom-out" data-aos-duration="2000">
                 <div class="footer-section">
-                    <h3>About</h3>
+                    <h3>About Us</h3>
                     <p>We serve history and tradition in plates.</p>
                 </div>
 
                 <div class="footer-section">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Reservation</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About us</a></li>
+                        <li><a href="menu.html">Our Menu</a></li>
+                        <li><a href="reservation.html">Reserve a table</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <div class="contact-info">
-                        <p class="address"><b>Address:</b> #278H, Street 201R, Kroalkor <br>Village, Sangkat Kilometer 6, Khan Russey <br> Keo, Phnom Penh, Cambodia </p>
-                        <p class="email"><b>Email:</b> phkamalis@gmail.com</p>
-                        <p class="telephone"><b>Telephone: </b>(+855)99 9999 99</p>
+                        <p class="address"><b>Address:</b> No.278H, St.209R, Phnom Penh</p>
+                        <p class="email"><b>Email:</b> Malis@domain.com</p>
+                        <p class="telephone"><b>Telephone: </b>(+855)12 345 678</p>
                     </div>
                 </div>
 
@@ -160,7 +159,7 @@
 
             </div>
 
-            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group ....  | Prof. Prohim Tam</p>
+            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group Jasmine  | Prof. Prohim Tam</p>
 
             </div>
     </footer>
