--- a/index.html
+++ b/index.html
@@ -44,10 +44,58 @@
                 <h1 id="header">SEASONAL MENU</h1>
                 <h2 id="description">Discover our seasonal delights</h2>
             </div>
-            <br><br>    
-            <div>
-                
+            <div class="menu-grid1">  
+                <div class="course-section">
+                    <div class="course-title">APPETIZER</div>
+                    <img class="course-img" src="chickensalad.jpg" alt="chicken-salad"><br><br>
+                    <div class="course-name">CHICKEN SALAD</div>
+                    <div class="course-description">Chicken | Cucumber | Carrot | Cabbage</div>
+                </div>
+                <div class="course-section">
+                    <div class="course-title">ENTRÉE</div>
+                    <img class="course-img" src="foie-gras.jpg" alt="foie-gras"><br><br>
+                    <div class="course-name">FOIE GRAS</div>
+                    <div class="course-description">Brioche | Cherry jus | Pistachio</div>
+                </div>
+                <div class="course-section">
+                    <div class="course-title">MAIN COURSE</div>
+                    <img class="course-img" src="amok.png" alt="amok"><br><br>
+                    <div class="course-name">FISH AMOK</div>
+                    <div class="course-description">Fish Fillet | Khmer Spices | Coconut Cream</div>
+                </div>
+                <div class="course-section">
+                    <div class="course-title">DESSERT</div>
+                    <img class="course-img" src="egg.jpg" alt="egg-dessert"><br><br>
+                    <div class="course-name">EGG IN THE NEST</div>
+                    <div class="course-description">Coconut | Passion Fruit | Lemon Grass</div>
+                </div>
             </div>
+            <div class="menu-grid1">
+                <div class="course-section">
+                    <img class="course-img" src="springrolls.jpg" alt="springrolls"><br><br>
+                    <div class="course-name">SPRING ROLLS</div>
+                    <div class="course-description">Rice Noodle | Shrimp | Herbs</div>
+                </div>
+                <div class="course-section">
+                    <img class="course-img" src="oyster.webp" alt="foie-gras"><br><br>
+                    <div class="course-name">OYSTER</div>
+                    <div class="course-description">Oscietra caviar | Yuzu | Cauliflower</div>
+                </div>
+                <div class="course-section">
+                    <img class="course-img" src="stonecrab.jpg" alt="stonecrab"><br><br>
+                    <div class="course-name">Stir Fried Stone Crab</div>
+                    <div class="course-description">Stone Crab | Pepper | Green Onions</div>
+                </div>
+                <div class="course-section">
+                    <img class="course-img" src="banana.webp" alt="banana pudding"><br><br>
+                    <div class="course-name">BANANA PUDDING</div>
+                    <div class="course-description">Wild Banana | Coconut Milk | Rice Flour</div>
+                </div>
+            </div>
+                <div class="menu-cta" data-aos="fade-up" data-aos-duration="1000">
+                    <p>Ready to experience our flavors?</p>
+                    <a href="reservation.html" class="btn1 bookbtn">Book Your Table</a>
+                </div>
             <br><br>
         </div>
     </main>
