--- a/aboutus.html
+++ b/aboutus.html
@@ -12,10 +12,12 @@
     <header>
         <img data-aos="fade-down" data-aos-duration="1500" src="logo.png" alt="img" class="logo">
         <nav> 
-            <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
+            <a data-aos="fade-down" data-aos-duration="1500" href="home.html">HOME</a>
             <a data-aos="fade-down" data-aos-duration="2000" href="#">ABOUT</a>
             <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
+            <a data-aos="fade-down" data-aos-duration="3000" href="blog.html">BLOG</a>
+            <a data-aos="fade-down" data-aos-duration="3000" href="contact.html">CONTACT</a>
         </nav>
     </header>
 
@@ -54,6 +56,7 @@
                 </div>
                 <div class="atmosphere-image" data-aos="fade-left" data-aos-duration="1500">
                     <!-- Image will be inserted here -->
+                    <img src="res-atmos.jpg" alt="">
                 </div>
             </div>
 
@@ -63,6 +66,7 @@
                     <div class="chef-card" data-aos="zoom-in" data-aos-duration="1500">
                         <div class="chef-card-image">
                             <!-- Chef image here -->
+                             <img src="chef1.webp" alt="">
                         </div>
                         <div class="chef-card-content">
                             <h3>Chef Sokha</h3>
@@ -74,6 +78,7 @@
                     <div class="chef-card" data-aos="zoom-in" data-aos-duration="1700">
                         <div class="chef-card-image">
                             <!-- Chef image here -->
+                             <img src="chef2.jpg" alt="">
                         </div>
                         <div class="chef-card-content">
                             <h3>Chef Veasna</h3>
@@ -85,6 +90,7 @@
                     <div class="chef-card" data-aos="zoom-in" data-aos-duration="1900">
                         <div class="chef-card-image">
                             <!-- Chef image here -->
+                            <img src="chef3.jfif" alt="">
                         </div>
                         <div class="chef-card-content">
                             <h3>Chef Chanthy</h3>
@@ -96,6 +102,7 @@
                     <div class="chef-card" data-aos="zoom-in" data-aos-duration="2100">
                         <div class="chef-card-image">
                             <!-- Chef image here -->
+                             <img src="chef4.jpg" alt="">
                         </div>
                         <div class="chef-card-content">
                             <h3>Chef Dara</h3>
@@ -114,6 +121,7 @@
                     <div class="team-card" data-aos="fade-up" data-aos-duration="1500">
                         <div class="team-card-image">
                             <!-- Team member image here -->
+                             <img src="head.jpg" alt="">
                         </div>
                         <div class="team-card-overlay">
                             <h3>Sopheap Chen</h3>
@@ -126,6 +134,7 @@
                     <div class="team-card" data-aos="fade-up" data-aos-duration="1700">
                         <div class="team-card-image">
                             <!-- Team member image here -->
+                             <img src="chef5.webp" alt="">
                         </div>
                         <div class="team-card-overlay">
                             <h3>Pisey Rath</h3>
@@ -138,6 +147,7 @@
                     <div class="team-card" data-aos="fade-up" data-aos-duration="1900">
                         <div class="team-card-image">
                             <!-- Team member image here -->
+                            <img src="manage1.jpg" alt="">
                         </div>
                         <div class="team-card-overlay">
                             <h3>Kosal Nguon</h3>
@@ -217,26 +227,27 @@
 
             <div class="footer-contents" data-aos="zoom-out" data-aos-duration="2000">
                 <div class="footer-section">
-                    <h3>About Us</h3>
+                    <h3>About</h3>
                     <p>We serve history and tradition in plates.</p>
                 </div>
 
                 <div class="footer-section">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutus.html">About us</a></li>
-                        <li><a href="menu.html">Our Menu</a></li>
-                        <li><a href="reservation.html">Reserve a table</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Reservation</a></li>
+                        <li><a href="#">Blog</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <div class="contact-info">
-                        <p class="address"><b>Address:</b> No.278H, St.209R, Phnom Penh</p>
-                        <p class="email"><b>Email:</b> Malis@domain.com</p>
-                        <p class="telephone"><b>Telephone: </b>(+855)12 345 678</p>
+                        <p class="address"><b>Address:</b> #278H, Street 201R, Kroalkor <br>Village, Sangkat Kilometer 6, Khan Russey <br> Keo, Phnom Penh, Cambodia </p>
+                        <p class="email"><b>Email:</b> phkamalis@gmail.com</p>
+                        <p class="telephone"><b>Telephone: </b>(+855)99 9999 99</p>
                     </div>
                 </div>
 
@@ -246,7 +257,7 @@
 
             </div>
 
-            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group Jasmine | Prof. Prohim Tam</p>
+            <p class="copyrights">Phka Malis Restaurant © 2025. All Rights Reserved. | INFO 250 002 | Group ....  | Prof. Prohim Tam</p>
 
         </div>
 
@@ -255,6 +266,5 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script src="script.js"></script>
-
 
 </body>
