--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <header>
         <img data-aos="fade-down" data-aos-duration="1500" src="logo.png" alt="img" class="logo">
         <nav> 
-            <a data-aos="fade-down" data-aos-duration="1500" href="home.html">HOME</a>
+            <a data-aos="fade-down" data-aos-duration="1500" href="index.html">HOME</a>
             <a data-aos="fade-down" data-aos-duration="2000" href="#">ABOUT</a>
             <a data-aos="fade-down" data-aos-duration="2500" href="menu.html">MENU</a>
             <a data-aos="fade-down" data-aos-duration="3000" href="reservation.html">RESERVATION</a>
@@ -268,3 +268,4 @@
     <script src="script.js"></script>
 
 </body>
+
