--- a/aboutus.html
+++ b/aboutus.html
@@ -243,9 +243,9 @@
                 <div class="footer-section">
                     <h3>Contact</h3>
                     <div class="contact-info">
-                        <p class="address"><b>Address:</b> #278H, Street 201R, Kroalkor <br>Village, Sangkat Kilometer 6, Khan Russey <br> Keo, Phnom Penh, Cambodia </p>
-                        <p class="email"><b>Email:</b> phkamalis@gmail.com</p>
-                        <p class="telephone"><b>Telephone: </b>(+855)99 9999 99</p>
+                        <p class="address"><b>Address:</b> No.278H, St.209R, Phnom Penh</p>
+                        <p class="email"><b>Email:</b> Malis@domain.com</p>
+                        <p class="telephone"><b>Telephone: </b>(+855)12 345 678</p>
                     </div>
                 </div>
 
